<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.crypto.activity.Main2Activity">
    <LinearLayout
        android:layout_marginStart="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:text="@string/currency_name"
            android:layout_margin="10dp"
            android:id="@+id/coin_name"
            android:layout_width="0dp"
            android:layout_weight="4.5"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="4.5"
            android:layout_height="wrap_content">
        <TextView
            android:gravity="start"
            android:text="@string/usd_price"
            android:layout_margin="10dp"
            android:id="@+id/coin_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
            <TextView
            android:gravity="start"
            android:text="@string/total_market_capitalization"
            android:layout_margin="10dp"
            android:id="@+id/coin_market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
       <TextView
           android:text="Add to favourites"
           android:gravity="start"
           android:layout_gravity="center"
           android:layout_weight="2.5"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />

    </LinearLayout>
    <View
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="2dp">

    </View>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>
